Add links to index.html, add basic markup to authentic poutine page

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="./recipes/authentic-poutine.html">Authentic Poutine</a>
+    <a href="./recipes/buttermilk-fried-chicken.html">Buttermilk Fried Chicken</a>
+    <a href="./recipes/feta-bake.html">Feta Pasta Bake</a>
+    <a href="./recipes/potato-leek.html">Potato Leek Soup</a>
+    <a href="recipes/beef-barley.html">Beef & Barley Soup</a>
 </body>
 </html>
