--- a/recipes/feta-bake.html
+++ b/recipes/feta-bake.html
@@ -7,5 +7,41 @@
 </head>
 <body>
     <h1>Feta Pasta Bake</h1>
+
+    <h2>Ingredients:</h2>
+
+    <ul>
+        <li> <strong>2</strong> pints cherry or grape tomatoes</li>
+        <li><strong>1</strong> shallot, quartered</li>
+        <li><strong>3</strong> cloves garlic, smashed</li>
+        <li><strong>1/2</strong> cup extra-virgin olive oil</li>
+        <li>Pinch crushed red pepper flakes</li>
+        <li><strong>1</strong>8 oz block feta</li>
+        <li><strong>3</strong> sprigs fresh thyme</li>
+        <li><strong>10</strong> oz pasta</li>
+        <li>Zest of <strong>1</strong> lemon</li>
+        <li>Fresh basil, for garnish</li>
+    </ul>
+
+    <h2>Directions:</h2>
+
+    <ol>
+        <li>
+            <h3>Step 1</h3>
+            <p>Preheat oven to 400°. In a large ovenproof skillet or medium baking dish, combine tomatoes, shallot, garlic, and all but 1 tablespoon oil. Season with salt and red pepper flakes and toss to combine. </p>
+        </li>
+        <li>
+            <h3>Step 2</h3>
+            <p>Place feta into center of tomato mixture and drizzle with remaining 1 tablespoon oil. Scatter thyme sprigs over tomatoes. Bake for 40 to 45 minutes, until tomatoes are bursting and feta is golden on top.</p>
+        </li>
+        <li>
+            <h3>Step 3</h3>
+            <p>Meanwhile, in a large pot of boiling salted water, cook pasta until al dente according to package directions. Reserve ½ cup pasta water before draining.</p>
+        </li>
+        <li>
+            <h3>Step 4</h3>
+            <p>To skillet with tomatoes and feta, add cooked pasta, reserved pasta water, and lemon zest (if using) and stir until combined. Garnish with basil.</p>
+        </li>
+    </ol>
 </body>
 </html>
