Add recupe to beef barley page

--- a/recipes/beef-barley.html
+++ b/recipes/beef-barley.html
@@ -7,5 +7,31 @@
 </head>
 <body>
     <h1>Beef & Barley Soup</h1>
+
+    <h2>Ingredients</h2>
+
+    <ul>
+        <li><strong>2</strong> pounds (<strong>1</strong>kg) boneless beef chuck roast, cut into <strong>1 1/2</strong> inch chunks, or <strong>3</strong> pounds (<strong>1.3</strong>kg) bone-in beef short ribs</li>
+        <li>Kosher salt and freshly ground black pepper</li>
+        <li><strong>1</strong>Tbsp (<strong>15</strong>ml) canola oil</li>
+        <li><strong>3</strong> large carrots (<strong>10</strong> ounces, <strong>280</strong>g), duced</li>
+        <li><strong>1</strong> large yellow onion (<strong>12</strong> ounces; <strong>340</strong>g), diced</li>
+        <li><strong>2</strong> ribs celery (<strong>6</strong>ounces; <strong>170</strong>g), diced</li>
+        <li><strong>4</strong> medium cloves garlic, roughly chopped</li>
+        <li><strong>3</strong> quarts (<strong>3</strong>L) chicken stock</li>
+        <li><strong>2</strong> sprigs fresh thyme, <strong>1</strong> bay leaf, and about <strong>5</strong> whole black peppercorns</li>
+        <li><strong>1</strong> cup pearled barley (<strong>7</strong> ounces; <strong>200</strong>g)</li>
+        <li><strong>1/2</strong> Tsp (<strong>3</strong>ml) Asian fish sauce</li>
+        <li>Minced fresh parsley, for garnish</li>
+    </ul>
+
+    <h2>Instructions</h2>
+
+    <ol>
+        <li>Season beef with salt and pepper. In a large pot or Dutch oven, heat oil over high heat until lightly smoking. Working in batches if necessary, add beef and cook, turning occasionally, until well browned on all sides, about 5 minutes per side. Transfer to a large platter.</li>
+        <li>Add carrot, onion, celery, and garlic to pot and cook, stirring and scraping up any browned bits from the bottom, until lightly browned, about 6 minutes. Scrape vegetables into a heatproof bowl and set aside. Add stock to pot, return to heat, and scrape up any browned bits from bottom of pot.</li>
+        <li>Meanwhile, cut beef into chunks and add to pot, along with reserved bones, if using, and herb sachet. Bring to a simmer, then reduce heat to maintain a low simmer and cook until beef is tender, 1 to 2 hours; skim any foam that rises to the top.</li>
+        <li>Discard bones and herb sachet. Add barley, reserved vegetables, and fish sauce, if using, and simmer until barley and vegetables are tender, about 30 minutes. Season with salt and pepper. If soup is too dry, top up with water to achieve desired consistency. Serve, garnishing with parsley.</li>
+    </ol>
 </body>
 </html>
