Put links on index.html page in unordered list

--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/authentic-poutine.html">Authentic Poutine</a>
-    <a href="./recipes/buttermilk-fried-chicken.html">Buttermilk Fried Chicken</a>
-    <a href="./recipes/feta-bake.html">Feta Pasta Bake</a>
-    <a href="./recipes/potato-leek.html">Potato Leek Soup</a>
-    <a href="recipes/beef-barley.html">Beef & Barley Soup</a>
+    <ul>
+    <li><a href="./recipes/authentic-poutine.html">Authentic Poutine</a></li>
+    <li><a href="./recipes/buttermilk-fried-chicken.html">Buttermilk Fried Chicken</a></li>
+    <li><a href="./recipes/feta-bake.html">Feta Pasta Bake</a></li>
+    <li><a href="./recipes/potato-leek.html">Potato Leek Soup</a></li>
+    <li>
+        <a href="recipes/beef-barley.html">Beef & Barley Soup</a>
+        </ul>
+    </li>
 </body>
 </html>
