--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-    <li><a href="./recipes/authentic-poutine.html">Authentic Poutine</a></li>
-    <li><a href="./recipes/buttermilk-fried-chicken.html">Buttermilk Fried Chicken</a></li>
-    <li><a href="./recipes/feta-bake.html">Feta Pasta Bake</a></li>
-    <li><a href="./recipes/potato-leek.html">Potato Leek Soup</a></li>
-    <li>
-        <a href="recipes/beef-barley.html">Beef & Barley Soup</a>
+    <div class="container">
+        <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="./recipes/authentic-poutine.html">Authentic Poutine</a></li>
+            <li><a href="./recipes/feta-bake.html">Feta Pasta Bake</a></li>
+            <li><a href="./recipes/potato-leek.html">Potato Leek Soup</a></li>
+            <li><a href="recipes/beef-barley.html">Beef & Barley Soup</a>
+            <li><a href="./recipes/buttermilk-fried-chicken.html">Buttermilk Fried Chicken</a></li>
         </ul>
-    </li>
+        </li>
+    </div>
 </body>
 </html>
