--- a/recipes/potato-leek.html
+++ b/recipes/potato-leek.html
@@ -3,51 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/recipes/styles.css">
     <title>ODin Recipes - Potato Leek Soup</title>
 </head>
 <body>
-    <h1>Potato Leek Soup</h1>
-
-    <h2>Ingredients</h2>
-
-    <ul>
-        <li><strong>3</strong> large leeks (about 3 cups, chopped)</li>
-        <li><strong>2</strong> Tbsp butter</li>
-        <li><strong>4</strong> cups chicken (or vegetable) broth</li>
-        <li><strong>2</strong> pounds potatoes (Yukon gold or Russet), peeled, diced into <strong>1/2</strong> inch pieces</li>
-        <li><strong>1</strong> Tsp sea salt, less or more to taste</li>
-        <li>Pinch dried marjoram</li>
-        <li><strong>1</strong> or <strong>2</strong> sprigs fresh thyme, or 1/2 Tsp dried thyme</li>
-        <li><strong>1</strong> bay leaf</li>
-        <li><strong>1/4</strong> cup chopped parsley</li>
-        <li>Sprinkle of Tobasco sauce or other red chile sauce</li>
-        <li>Fresh ground pepper, to taste</li>
-    </ul>
-
-    <h2>Instructions</h2>
-
-    <ol>
-        <li>
-            <h3>Clean and cut the leeks:</h3>
-            <p>Cut off the roots of the leeks. Cut the leeks lengthwise, fan them open under running water to dislodge any dirt or mud hiding inside. Cut off the tough dark green tops and discard (either compost or freeze for making stock). Slice the white and light green parts of the leeks crosswise into 1/4-inch thick slices. Place the slices in a bowl of cold water and agitate them with your hands to dislodge any remaining dirt. Then scoop out the leeks with a sieve or slotted spoon. </p>
-        </li>
-        <li>
-            <h3>Cook leeks in butter to soften:</h3>
-            <p>Melt butter on medium heat in a 3 to 4 quart thick-bottomed pot. Add the chopped leeks, stir to coat with the butter. Cover the pot and reduce the heat to low, cook for 10 minutes until the leeks are softened. Check to make sure the leeks are not browning.</p>
-        </li>
-        <li>
-            <h3>Simmer the soup:</h3>
-            <p>Add the broth, diced potatoes, bay leaf, marjoram, thyme, and a teaspoon of salt to the pot. Increase the heat to high to bring to a simmer, then lower the heat to maintain a low simmer, and cook for 20 minutes, until the potatoes are cooked through.</p>
-        </li>
-        <li>
-            <h3>Purée the soup:</h3>
-            <p>Remove and discard the bay leaf and thyme sprig. Use an immersion blender or standing blender to blend about half of the soup if you want a chunky soup, or all of it if you would like your soup to be more smooth.
-            Note: if you're using a standing blender, purée the soup in batches, don't fill the blender more than a third full at a time, and remember to hold down the lid while the blender is going.</p>
-        </li>
-        <li>
-            <h3>Season the soup:</h3>
-            <p>Add the parsley, and cook a few minutes more. Add a few dashes of Tabasco to taste. Add freshly ground pepper and more salt to taste. (Potatoes soak up salt, so you may need to add more salt than you expect.)</p>
-        </li>
-    </ol>
+    <div class="container">
+        <h1>Potato Leek Soup</h1>
+        <h2>Ingredients</h2>
+        <ul>
+            <li><strong>3</strong> large leeks (about 3 cups, chopped)</li>
+            <li><strong>2</strong> Tbsp butter</li>
+            <li><strong>4</strong> cups chicken (or vegetable) broth</li>
+            <li><strong>2</strong> pounds potatoes (Yukon gold or Russet), peeled, diced into <strong>1/2</strong> inch pieces</li>
+            <li><strong>1</strong> Tsp sea salt, less or more to taste</li>
+            <li>Pinch dried marjoram</li>
+            <li><strong>1</strong> or <strong>2</strong> sprigs fresh thyme, or 1/2 Tsp dried thyme</li>
+            <li><strong>1</strong> bay leaf</li>
+            <li><strong>1/4</strong> cup chopped parsley</li>
+            <li>Sprinkle of Tobasco sauce or other red chile sauce</li>
+            <li>Fresh ground pepper, to taste</li>
+        </ul>
+        <h2>Instructions</h2>
+        <ol>
+            <li>
+                <h3>Clean and cut the leeks:</h3>
+                <p>Cut off the roots of the leeks. Cut the leeks lengthwise, fan them open under running water to dislodge any dirt or mud hiding inside. Cut off the tough dark green tops and discard (either compost or freeze for making stock). Slice the white and light green parts of the leeks crosswise into 1/4-inch thick slices. Place the slices in a bowl of cold water and agitate them with your hands to dislodge any remaining dirt. Then scoop out the leeks with a sieve or slotted spoon. </p>
+            </li>
+            <li>
+                <h3>Cook leeks in butter to soften:</h3>
+                <p>Melt butter on medium heat in a 3 to 4 quart thick-bottomed pot. Add the chopped leeks, stir to coat with the butter. Cover the pot and reduce the heat to low, cook for 10 minutes until the leeks are softened. Check to make sure the leeks are not browning.</p>
+            </li>
+            <li>
+                <h3>Simmer the soup:</h3>
+                <p>Add the broth, diced potatoes, bay leaf, marjoram, thyme, and a teaspoon of salt to the pot. Increase the heat to high to bring to a simmer, then lower the heat to maintain a low simmer, and cook for 20 minutes, until the potatoes are cooked through.</p>
+            </li>
+            <li>
+                <h3>Purée the soup:</h3>
+                <p>Remove and discard the bay leaf and thyme sprig. Use an immersion blender or standing blender to blend about half of the soup if you want a chunky soup, or all of it if you would like your soup to be more smooth.
+                Note: if you're using a standing blender, purée the soup in batches, don't fill the blender more than a third full at a time, and remember to hold down the lid while the blender is going.</p>
+            </li>
+            <li>
+                <h3>Season the soup:</h3>
+                <p>Add the parsley, and cook a few minutes more. Add a few dashes of Tabasco to taste. Add freshly ground pepper and more salt to taste. (Potatoes soak up salt, so you may need to add more salt than you expect.)</p>
+            </li>
+        </ol>
+    </div>
 </body>
 </html>
